syntax = "proto3";

package product;

service ProductService {
  rpc getProduct (ProductById) returns (Product);
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 availableQuantity = 5;
}

message ProductById {
  int32 id = 1;
}

message Empty {}
